Production URL mongo and nodemon

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Weslley Hinsch",
   "license": "MIT",
   "scripts": {
-    "app": "nodemon src/server.js"
+    "app": "node src/server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
