--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "back",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "author": "Weslley Hinsch",
   "license": "MIT",
