--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "Weslley Hinsch",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "node --experimental-specifier-resolution=node src/server.js"
   },
